# it202-2015-magic-system

./: CMakeLists.txt  Makefile  README.md  example.c  links.txt  notes.txt  thread.h
src/: Makefile  a.out  contexte  preemption.c  preemption1.c  queue.h  test  thread.c  thread.c~  thread.h  thread.h~
tst/: 02-switch.c  11-join.c  12-join-main.c  31-switch-many.c  76-preemption.c
